Fixed scaling issue on smaller displays and cleaned up code

--- a/src/Components/Home/HomeStyles.css
+++ b/src/Components/Home/HomeStyles.css
@@ -4,19 +4,21 @@
 	align-items: center;
 	justify-content: center;
 }
-.spacetop{
-	margin-top: 58px;
+.main{
+	display: flex;
+	flex-flow: column;
+	justify-content: center;
+	align-items: center;
+	margin-top: 68px;
 }
 .header{
 	text-align: center;
 	color: #05b4e4;
 	font-size: 36px;
 	text-transform: uppercase;
-	margin-bottom: 0;
+	margin: 0;
 }
-
-.headerImage{
-	text-align: center;
+.image{
 	width: 55%;
 	min-width: 350px;
 	height: auto;
